--- a/src/pages/Dashboard/components/FilterPopup.module.scss
+++ b/src/pages/Dashboard/components/FilterPopup.module.scss
@@ -4,27 +4,23 @@
 
 .backdrop {
   position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  inset: 0;
   background-color: transparent;
   z-index: $z-index-dropdown - 1;
 }
 
 .filterPopup {
   position: absolute;
-  top: 100%;
-  left: 0;
-  margin-top: $spacing-sm;
+  top: $spacing-xl;
+  left: $spacing-xl;
   background-color: $color-white;
   border: 1px solid $color-gray-lighter;
-  border-radius: $radius-md;
+  border-radius: $radius-lg;
   box-shadow: $shadow-xl;
   padding: $spacing-xl;
-  z-index: $z-index-dropdown;
-  min-width: 270px;
-  max-width: 300px;
+  z-index: $z-index-dropdown + 1;
+  min-width: 310px;
+  max-width: 345px;
   
   @include mobile-only {
     position: fixed;
@@ -74,5 +70,18 @@
   grid-template-columns: 1fr 1fr;
   gap: $spacing-md;
   margin-top: $spacing-sm;
+}
+
+.input[type='date'] {
+  padding-right: $spacing-2xl;
+  background-image: url("@/assets/icons/calender.svg");
+  background-repeat: no-repeat;
+  background-position: right $spacing-md center;
+  background-size: 16px;
+  
+  &::-webkit-calendar-picker-indicator {
+    opacity: 0;
+    cursor: pointer;
+  }
 }
 
