--- a/src/pages/UserDetails/UserDetails.module.scss
+++ b/src/pages/UserDetails/UserDetails.module.scss
@@ -26,6 +26,12 @@
   }
 }
 
+.backIcon {
+  width: 18px;
+  height: 12px;
+  flex-shrink: 0;
+}
+
 .pageHeader {
   @include flex-between;
   margin-bottom: $spacing-2xl;
@@ -87,14 +93,14 @@
   height: 100px;
   border-radius: $radius-full;
   overflow: hidden;
-  background-color: $color-gray-bg;
+  background-color: rgba($color-navy, 0.08);
   @include flex-center;
   flex-shrink: 0;
   
   img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    width: 60%;
+    height: 60%;
+    object-fit: contain;
   }
   
   svg {
