--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -82,6 +82,7 @@ $shadow-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.1);
 $sidebar-width: 283px;
 $header-height: 100px;
 $container-max-width: 1440px;
+$min-touch-target: 44px;
 
 // Transitions
 $transition-fast: 150ms ease-in-out;
