--- a/src/pages/Login/Login.module.scss
+++ b/src/pages/Login/Login.module.scss
@@ -9,6 +9,8 @@
   
   @include mobile-only {
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
 
@@ -21,8 +23,9 @@
   flex-direction: column;
   
   @include mobile-only {
-    padding: $spacing-xl $spacing-md;
-    min-height: 30vh;
+    padding: $spacing-lg $spacing-md;
+    min-height: auto;
+    flex: 0;
   }
   
   @include desktop {
@@ -71,6 +74,11 @@
   align-items: center;
   justify-content: center;
   padding: $spacing-xl $spacing-md;
+  
+  @include mobile-only {
+    flex: 1;
+    width: 100%;
+  }
   
   @include desktop {
     padding: $spacing-2xl;
