--- a/src/components/layout/Header/Header.module.scss
+++ b/src/components/layout/Header/Header.module.scss
@@ -33,7 +33,7 @@
 
 // Hamburger menu button (mobile only)
 .hamburgerButton {
-  display: none;
+  display: none !important; // Force hide on desktop
   width: $min-touch-target;
   height: $min-touch-target;
   @include flex-center;
@@ -45,7 +45,7 @@
   gap: 4px;
   
   @include mobile-only {
-    display: flex;
+    display: flex !important; // Force show on mobile only
   }
   
   &:active {
